Fix sort label spacing
All that's left to troubleshoot is the sorting and offset methods

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@ h1 {
 .favorites-button {
 	margin-bottom: 1rem;
 }
+
+.sort-label {
+	display: inline-block;
+	margin-left: 0.25rem;
+}
